# total-coloring-toolkit

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  codeql.yml
auditors/: d8_dependency_audit.cpp
docs/: architecture.md  d8-dependency-audit.md  easley.md  m6-protected-transfer.md  mathematical-specification.md  paired-hole-alpha-terminal-coverage.md  paired-hole-verifier.md  reproducibility.md  research-target.md
schemas/: census-completion-v1.schema.json  census-manifest-v1.schema.json  census-record-v1.schema.json  d8-dependency-pivot-audit-v1.schema.json  dataset-manifest-v2.schema.json  graph-v1.schema.json  paired-hole-state-v1.schema.json  total-coloring-certificate-v1.schema.json  universal-census-completion-v1.schema.json  universal-census-manifest-v1.schema.json  universal-census-record-v1.schema.json  universal-census-summary-v1.schema.json
scripts/: __init__.py  package_gate.py
scripts/easley/: __init__.py  authority.py  bootstrap.py  census_task.py  common.py  exact_union.py  prerequisite.py  prerequisite_task.py  reduce.py  submit.py  validate_task.py
scripts/m6/: __init__.py  check_protected_transfer.py  independent_static.py  kernel.py  protected_transfer.py
scripts/research/: matching_core_extension.py  paired_hole_alpha_frontier_audit.py  paired_hole_orbit.py
src/total_coloring/: __init__.py  __main__.py  auxiliary.py  backends.py  census.py  certificates.py  cli.py  cnf.py  edge.py  external_tools.py  geng.py  graph.py  graph6.py  model.py  paired_hole.py  proof_audit.py  publishing.py  schema_resources.py  solver.py  static_solver.py  total.py  universal_census.py  universal_release.py  universal_shards.py
tests/: test_census_schemas.py  test_certificates.py  test_graph.py  test_graph6.py  test_graph_properties.py  test_paired_hole.py  test_schema_resources.py  test_schemas.py  test_solver_differential.py  test_universal_census_schemas.py
tests/fixtures/: d8-dependency-counts-v1.json
tests/installed/: schema_resources_smoke.py
tests/integration/: test_d8_dependency_audit.py  test_installed_geng.py  test_publishing_contract.py  test_universal_release_contract.py
tests/reference/: d8_dependency_reference.py
tests/unit/: test_auxiliary.py  test_backends.py  test_census.py  test_cli.py  test_cnf.py  test_easley.py  test_easley_authority.py  test_easley_sealed_loader.py  test_edge.py  test_geng.py  test_m6_protected_transfer.py  test_matching_core_extension_script.py  test_model.py  test_paired_hole_orbit_script.py  test_proof_audit.py  test_publishing.py  test_publishing_validation.py  test_release_hardening_coverage.py  test_solver.py  test_static_solver.py  (+4 more)
